--- a/style.css
+++ b/style.css
@@ -219,13 +219,15 @@ header.header > ul > li.link a span.text {
 main.main {
   /* border: 1px solid red; */
   display: flex;
+  gap: 0;
   min-height: 90vh;
+  justify-content: space-between;
 }
 
 main.main > article.content {
   /* border: 1px solid #000000; */
-  padding: 30px 0;
-  width: 67%;
+  padding: 30px 20px 30px 0;
+  width: 65%;
   display: flex;
   flex-flow: column;
   gap: 10px;
@@ -417,6 +419,39 @@ main.main > article.content #content.content {
   font-size: 1rem;
 }
 
+main.main > article.content #content.content div.src-image{
+  /* border: 1px solid #ff0000; */
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1f2937;
+  font-size: 1rem;
+}
+
+main.main > article.content #content.content div.src-image figure {
+  /* border: thin #c0c0c0 solid; */
+  display: flex;
+  flex-flow: column;
+  padding: 5px;
+  width: 500px;
+  max-width: 90%;
+  max-height: 350px;
+  margin: auto;
+}
+
+main.main > article.content #content.content div.src-image figure img {
+  width: auto;
+  height: 100%;
+}
+
+main.main > article.content #content.content div.src-image figure figcaption {
+  background-color: #dddddd;
+  font: italic smaller var(--font-main);
+  padding: 3px;
+  text-align: center;
+}
+
 main.main > article.content #content.content * {
   font-size: inherit;
   color: #1f2937;
@@ -475,5 +510,377 @@ main.main > article.content #content.content ol a {
 main.main > article.content #content.content ul a:hover,
 main.main > article.content #content.content ol a:hover {
   text-decoration-color: #4b5563bd !important;
-  -moz-text-decoration-color: #4b556321 !important;
+  -moz-text-decoration-color: #4b5563bd !important;
+}
+
+
+
+/*  Side bar */
+main.main > section.side {
+  /* border-left: thin solid #4b5563bd; */
+  padding: 30px 10px 30px 10px;
+  width: 33%;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+main.main > section.side .head {
+  /* border: thin solid #4b5563bd; */
+  padding: 0;
+  display: flex;
+  flex-flow: column;
+  gap: 15px;
+}
+
+main.main > section.side .head > p.text {
+  color: #6b7280;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+}
+
+main.main > section.side .head > .author {
+  /* border: thin solid #4b5563bd; */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+main.main > section.side .head > .author .image {
+  /* border: thin solid #4b5563bd; */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+main.main > section.side .head > .author .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+main.main > section.side .head > .author > .name {
+  /* border: thin solid #4b5563bd; */
+  padding: 0;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
+
+main.main > section.side .head > .author > .name a {
+  font-weight: 500;
+  color: #53595f;
+}
+
+main.main > section.side .head > .author > .name .occupation {
+  /* font-weight: 500; */
+  color: #6b7280;
+  font-size: 0.95rem;
+}
+
+
+
+
+
+
+/*Footer*/
+footer.footer {
+  padding-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 2fr;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-top: 50px;
+  padding-bottom: 30px;
+}
+
+footer.footer>section {
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+  gap: 10px;
+}
+
+footer.footer>section>.title {
+  color: #53595f;
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+footer.footer>section>ul.footer-list {
+  padding: 0%;
+  margin: 0%;
+  list-style-type: none;
+  padding-left: 1px;
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+  gap: 10px;
+}
+
+footer.footer>section>ul.footer-list>li.item {
+  margin: 0%;
+  padding: 0%;
+  width: max-content;
+  position: relative;
+  /* border: 1px solid #808080; */
+}
+
+footer.footer>section>ul.footer-list>li.item>.dot {
+  display: inline-block;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  right: -9px;
+  top: 3px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+footer.footer>section>ul.footer-list>li.item>a.item-link {
+  color: #6b7280;
+  /* font-size: 0.98rem; */
+  text-decoration: none;
+}
+
+footer.footer>section>ul.footer-list>li.item>a.item-link:hover {
+  /* color: #08b86f; */
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  border-bottom: 1px solid #08b86f;
+}
+
+footer.footer>section.newsletter {
+  display: flex;
+  flex-flow: column;
+}
+
+footer.footer>section.newsletter>.text {
+  padding-left: 3px;
+  line-height: 1.3;
+  color: #53595f;
+}
+
+footer.footer>section.newsletter>form {
+  padding: 5px;
+  width: 100%;
+  position: relative;
+}
+
+footer.footer>section.newsletter>form>input[type="email"] {
+  width: 100%;
+  outline: none;
+  color: #53595f;
+  font-family: var(--font-one);
+  padding: 12px 15px;
+  font-size: 1rem;
+  /* border: 2px solid #4949bc; */
+  border-top-color: #21D029;
+  border-top-width: 2px;
+  border-right-color: #54df5b;
+  border-right-width: 2px;
+  border-bottom-color: #21D029;
+  border-bottom-width: 2px;
+  border-left-color: #18A565;
+  border-left-width: 2px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+footer.footer>section.newsletter>form>input[type="submit"] {
+  outline: none;
+  position: absolute;
+  cursor: pointer;
+  font-family: var(--font-one);
+  right: 30px;
+  top: 14px;
+  font-size: 1rem;
+  padding: 5px 15px;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  color: #ffffff;
+  border: none;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+.footer-social-box {
+  margin-top: 15px;
+  margin-left: 8px;
+  width: 120px;
+  display: -ms-grid;
+  display: grid;
+  justify-items: start;
+  grid-auto-flow: column;
+  grid-auto-columns: auto;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: auto;
+  grid-template-columns: auto;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+
+.footer-social-url {
+  position: relative;
+  z-index: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #6b7280;
+}
+
+.svg {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.fs-url-tooltip {
+  position: absolute;
+  left: -100%;
+  top: -50px;
+  /* bottom: 150%; */
+  z-index: 1000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #53595f;
+  color: #ffffff;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  transform: translate3d(0px, 16px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg);
+  transform-style: preserve-3d;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+footer.footer>.copy {
+  border-top: 1px solid #6b728037;
+  padding-top: 10px;
+  grid-column: 1/5;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer.footer>.copy>.copyright {
+  display: flex;
+  gap: 2px;
+}
+
+footer.footer>.copy>.copyright>.company {
+  display: inline-block;
+  margin: 0%;
+  margin-right: 10px;
+  margin-top: -5px;
+  font-size: 1.35rem;
+  font-weight: bold;
+  color: #53595f;
+  font-family: 'Segoe UI', Tahoma, var(--font-main), Verdana, sans-serif !important;
+}
+
+footer.footer>.copy>.copyright>i {
+  color: #6b7280;
+  font-style: normal;
+  font-family: inherit;
+  /* font-size: 1.2rem; */
+}
+
+footer.footer>.copy>.copyright>a {
+  /* border: 1px solid #80808040; */
+  color: #6b7280;
+  text-decoration: none;
+  text-align: center;
+}
+
+footer.footer>.copy>.copyright>a:hover {
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  border-bottom: 1px solid #08b86f;
+}
+
+footer.footer>.copy>.legal {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 0px;
+}
+
+footer.footer>.copy>.legal>a {
+  color: #6b7280;
+  padding: 0px 15px;
+  text-decoration: none;
+  border-right: 1px solid #6b728027;
+}
+
+footer.footer>.copy>.legal>a:last-of-type {
+  border-right: none;
+}
+
+footer.footer>.copy>.legal>a:hover {
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  /* border-bottom: 1px solid #08b86f; */
 }
