--- a/style.css
+++ b/style.css
@@ -267,16 +267,19 @@ header.header > ul {
   gap: 25px;
 }
 
+header.header > ul.left {
+  position: relative
+}
+
 header.header > ul > li.link {
   /* border: 1px solid black; */
   /* font-family: var(--font-mono); */
-  color: #53595f;
+  color: #6b7280;
   display: flex;
   align-items: center;
   justify-content: center;
   list-style-type: none;
   gap: 6px;
-  /* font-size: 1.05rem; */
   font-weight: 500;
 }
 
@@ -324,6 +327,105 @@ header.header > ul > li.link.moon a svg {
 header.header > ul > li.link a span.text {
   font-family: inherit;
 }
+
+
+/* Dropdown */
+header.header > ul > li.link > div.drop-down {
+  border: 0.002rem solid #6b72802f;
+  background-color: var(--background);
+  padding: 20px;
+  position: absolute;
+  left: -50px;
+  top: 30px;
+  width: 530px;
+  color: #6b7280;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  list-style-type: none;
+  box-shadow: 0 0 0 1px #ffffff25, 0px 2px 2px #0000000a, 0px 8px 16px -4px #0000000a;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+header.header > ul > li.link > div.drop-down ul {
+  /* border: 1px solid red; */
+  width: 100%;
+  margin: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 0;
+  row-gap: 10px;
+}
+
+header.header > ul > li.link > div.drop-down ul * {
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+}
+
+
+header.header > ul > li.link > div.drop-down ul > h4.title {
+  grid-column: 1/3;
+  margin: 0;
+  font-weight: 600;
+}
+
+header.header > ul > li.link > div.drop-down ul > li {
+  /* border: 1px solid red; */
+  width: 100%;
+  font-weight: 400;
+  padding: 3px 8px 5px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+header.header > ul > li.link > div.drop-down ul > li:hover {
+  background-color: #6b728015;
+}
+
+header.header > ul > li.link > div.drop-down ul > li a {
+  width: 100%;
+  font-weight: 400;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+header.header > ul > li.link > div.drop-down ul > li svg {
+  width: 24px;
+  height: 24px;
+}
+
+header.header > ul > li.link > div.drop-down ul > li.analytic svg {
+  width: 20px;
+  height: 20px;
+}
+
+
+header.header > ul > li.link > div.drop-down ul > li a span.content {
+  display: flex;
+  flex-flow: column;
+  line-height: 1.5;
+}
+
+header.header > ul > li.link > div.drop-down ul > li a span.content h5 {
+  font-weight: 500;
+  font-size: 1rem;
+  color: #1f2937;
+}
+
 
 
 main.main {
