--- a/style.css
+++ b/style.css
@@ -305,8 +305,8 @@ header.header > ul > li.link a svg {
   height: 15px;
 }
 
-header.header > ul > li.link.active svg,
-header.header > ul > li.link:hover svg {
+header.header > ul > li.link.active a > svg,
+header.header > ul > li.link:hover a > svg {
   color: #18A565;
 }
 
@@ -333,7 +333,7 @@ header.header > ul > li.link a span.text {
 header.header > ul > li.link > div.drop-down {
   border: 0.002rem solid #6b72802f;
   background-color: var(--background);
-  padding: 20px;
+  padding: 15px 10px;
   position: absolute;
   left: -50px;
   top: 30px;
@@ -341,6 +341,8 @@ header.header > ul > li.link > div.drop-down {
   color: #6b7280;
   display: flex;
   align-items: center;
+  flex-flow: column;
+  gap: 15px;
   justify-content: space-evenly;
   list-style-type: none;
   box-shadow: 0 0 0 1px #ffffff25, 0px 2px 2px #0000000a, 0px 8px 16px -4px #0000000a;
@@ -349,6 +351,26 @@ header.header > ul > li.link > div.drop-down {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+header.header > ul > li.link > div.drop-down > span.arrow {
+  border: 0.002rem solid #6b72802f;
+  border-bottom: none;
+  border-right: none;
+  background-color: var(--background);
+  position: absolute;
+  left: 52px;
+  top: -7px;
+  width: 14px;
+  height: 14px;
+  rotate: 45deg;
+  color: #6b7280;
+  display: flex;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
 }
 
 header.header > ul > li.link > div.drop-down ul {
@@ -362,6 +384,11 @@ header.header > ul > li.link > div.drop-down ul {
   row-gap: 10px;
 }
 
+header.header > ul > li.link > div.drop-down ul:last-of-type {
+  border-top: 0.002rem solid #6b72802f;
+  padding: 15px 0 0 0;
+}
+
 header.header > ul > li.link > div.drop-down ul * {
   transition: all 300ms ease-in-out;
   -webkit-transition: all 300ms ease-in-out;
@@ -373,7 +400,7 @@ header.header > ul > li.link > div.drop-down ul * {
 
 header.header > ul > li.link > div.drop-down ul > h4.title {
   grid-column: 1/3;
-  margin: 0;
+  padding: 0 0 0 10px;
   font-weight: 600;
 }
 
@@ -403,12 +430,16 @@ header.header > ul > li.link > div.drop-down ul > li a {
   gap: 10px;
 }
 
+header.header > ul > li.link > div.drop-down ul > li a:hover svg {
+  color: inherit;
+}
+
 header.header > ul > li.link > div.drop-down ul > li svg {
   width: 24px;
   height: 24px;
 }
 
-header.header > ul > li.link > div.drop-down ul > li.analytic svg {
+header.header > ul > li.link > div.drop-down ul > li.icon svg {
   width: 20px;
   height: 20px;
 }
