--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ header.header > ul > li.link > div.drop-down {
   top: 30px;
   width: 530px;
   color: #6b7280;
-  display: flex;
+  display: none;
   align-items: center;
   flex-flow: column;
   gap: 15px;
@@ -353,13 +353,21 @@ header.header > ul > li.link > div.drop-down {
   -o-border-radius: 10px;
 }
 
+header.header > ul > li.link.active > div.drop-down {
+  display: flex;
+}
+
+header.header > ul > li.link.active > a > svg {
+  rotate: 180deg;
+}
+
 header.header > ul > li.link > div.drop-down > span.arrow {
   border: 0.002rem solid #6b72802f;
   border-bottom: none;
   border-right: none;
   background-color: var(--background);
   position: absolute;
-  left: 52px;
+  left: 53px;
   top: -7px;
   width: 14px;
   height: 14px;
@@ -371,6 +379,11 @@ header.header > ul > li.link > div.drop-down > span.arrow {
   -moz-border-radius: 1px;
   -ms-border-radius: 1px;
   -o-border-radius: 1px;
+}
+
+
+header.header > ul > li.link.resources > div.drop-down > span.arrow {
+  left: 140px;
 }
 
 header.header > ul > li.link > div.drop-down ul {
@@ -401,7 +414,7 @@ header.header > ul > li.link > div.drop-down ul * {
 header.header > ul > li.link > div.drop-down ul > h4.title {
   grid-column: 1/3;
   padding: 0 0 0 10px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 header.header > ul > li.link > div.drop-down ul > li {
