--- a/style.css
+++ b/style.css
@@ -267,6 +267,7 @@ header.header > ul {
   gap: 25px;
 }
 
+
 header.header > ul.left {
   position: relative
 }
@@ -305,8 +306,16 @@ header.header > ul > li.link a svg {
   height: 15px;
 }
 
-header.header > ul > li.link.active a > svg,
-header.header > ul > li.link:hover a > svg {
+header.header > ul > li.link a svg {
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+}
+
+header.header > ul > li.link.active > a > svg,
+header.header > ul > li.link:hover  > a > svg {
   color: #18A565;
 }
 
@@ -333,10 +342,10 @@ header.header > ul > li.link a span.text {
 header.header > ul > li.link > div.drop-down {
   border: 0.002rem solid #6b72802f;
   background-color: var(--background);
-  padding: 15px 10px;
+  padding: 15px 0;
   position: absolute;
   left: -50px;
-  top: 30px;
+  top: 32px;
   width: 530px;
   color: #6b7280;
   display: none;
@@ -353,10 +362,17 @@ header.header > ul > li.link > div.drop-down {
   -o-border-radius: 10px;
 }
 
+header.header > ul > li.link:hover > div.drop-down,
 header.header > ul > li.link.active > div.drop-down {
   display: flex;
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
 }
 
+header.header > ul > li.link:hover > a > svg,
 header.header > ul > li.link.active > a > svg {
   rotate: 180deg;
 }
@@ -381,25 +397,24 @@ header.header > ul > li.link > div.drop-down > span.arrow {
   -o-border-radius: 1px;
 }
 
+header.header > ul > li.link.articles > div.drop-down > span.arrow {
+  left: 136px;
+}
 
 header.header > ul > li.link.resources > div.drop-down > span.arrow {
-  left: 140px;
+  left: 250px;
 }
 
 header.header > ul > li.link > div.drop-down ul {
   /* border: 1px solid red; */
   width: 100%;
   margin: 0;
+  padding: 0 10px;
   list-style-type: none;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 0;
   row-gap: 10px;
-}
-
-header.header > ul > li.link > div.drop-down ul:last-of-type {
-  border-top: 0.002rem solid #6b72802f;
-  padding: 15px 0 0 0;
 }
 
 header.header > ul > li.link > div.drop-down ul * {
@@ -410,16 +425,22 @@ header.header > ul > li.link > div.drop-down ul * {
   -o-transition: all 300ms ease-in-out;
 }
 
+header.header > ul > li.link > div.drop-down ul:last-of-type {
+  border-top: 0.002rem solid #6b72802f;
+  padding: 15px 0 0 0;
+}
+
 
 header.header > ul > li.link > div.drop-down ul > h4.title {
   grid-column: 1/3;
   padding: 0 0 0 10px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 header.header > ul > li.link > div.drop-down ul > li {
   /* border: 1px solid red; */
   width: 100%;
+  color: #6b7280;
   font-weight: 400;
   padding: 3px 8px 5px;
   font-size: 0.9rem;
