--- a/style.css
+++ b/style.css
@@ -380,6 +380,8 @@ header.header > ul > li.link.active > div.drop-down {
   -o-transition: all 300ms ease-in-out;
 }
 
+
+header.header > ul > li.link.active span.link-item svg,
 header.header > ul > li.link:hover span.link-item svg {
   rotate: 180deg;
 }
