--- a/res.css
+++ b/res.css
@@ -78,6 +78,7 @@
     /* border: 1px solid blue; */
     padding: 0 15px;
   }
+
   header.header {
     /* border: 1px solid red; */
     padding: 0;
@@ -93,6 +94,7 @@
 
   header.header .nav {
     display: flex;
+    margin-left: -8px;
     cursor: default !important;
   }
 
@@ -181,7 +183,7 @@
   header.header > ul > li.link span.link-item svg,
   header.header > ul > li.link.active > a > svg,
   header.header > ul > li.link:hover  > a > svg {
-    color: #1f2937;
+    color: #4b5563;
   }
 
   header.header > ul > li.link span.link-item {
@@ -200,8 +202,8 @@
   header.header > ul > li.link span.link-item > span.text,
   header.header > ul > li.link a {
     /* border: 1px solid black; */
-    color: #1f2937;
-    font-weight: 600;
+    color: #4b5563;
+    font-weight: 500;
     cursor: pointer;
     font-family: inherit;
   }
@@ -224,6 +226,14 @@
     list-style-type: none;
     box-shadow: none;
     border-radius: 0;
+  }
+
+  header.header > ul.left > li.link > div.drop-down * {
+    transition: all 500ms ease-in-out;
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -ms-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
   }
 
   header.header > ul > li.link > div.drop-down > span.arrow {
@@ -255,6 +265,7 @@
 
   header.header > ul > li.link > div.drop-down ul > li svg {
     /* border: 1px solid red; */
+    color: #6b7280;
     width: 26px;
     height: 26px;
     margin-left: -12px;
@@ -275,7 +286,7 @@
   }
 
   header.header > ul > li.link > div.drop-down ul > li a span.content h5 {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1rem;
     color: #6b7280;
   }
