--- a/style.css
+++ b/style.css
@@ -870,6 +870,25 @@ main.main > section.side {
   top: 70px;
 }
 
+main.main > section.side > span.open-details-mobile {
+  /* font-family: var(--font-mono); */
+  color: #6b7280;
+  min-height: 50px;
+  height: 50px;
+  width: 100%;
+  display: none;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  gap: 3px;
+  font-weight: 500;
+}
+
+main.main > section.side > span.open-details-mobile svg {
+  rotate: 180deg;
+}
+
 main.main > section.side .head {
   /* border: thin solid #4b5563bd; */
   padding: 0;
